<resources>
    <string name="app_name">BTLon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">858096754823-dhjs159s6bdpedhe9ousg1es4lhmu1nv.apps.googleusercontent.com</string>
    <string name="facebook_app_id">444729861689716</string>
    <string name="facebook_client_token">444729861689716|77ce4e6411ee848bcf2cd15808dc910f</string>
    <string name="chon_vi_tri_muon_giao">Chọn vị trí bạn muốn giao</string>
    <string name="menu">Menu</string>
    <string name="logo">logo</string>
    <string name="giong_noi">Giọng nói</string>
    <string name="gio_hang">Giỏ hàng</string>
    <string name="thong_bao">Thông báo</string>
    <string name="id">ID</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="chuc_nang">Chức năng</string>
    <string name="back_to_settings">Back to Settings</string>
    <string name="back">Back</string>
    <string name="exit">Exit</string>
    <string name="giao_den">Giao Đến</string>
    <string name="nhap_thong_tin_khach_hang">Nhập thông tin địa chỉ nhận hàng</string>
    <string name="sieu_thi_BXH">Địa Chỉ: </string>
    <string name="gio_hang_trong">Giỏ Hàng Trống</string>
    <string name="tien_hang">Tổng Đơn</string>
    <string name="_75_000">000.000đ</string>
    <string name="tong_don_hang">Tổng Đơn Hàng</string>
    <string name="phuong_thuc_thanh_toan">Phương thức thanh toán</string>
    <string name="doi_phuong_thuc">Đổi phương thức</string>
    <string name="thanh_toan">Thanh Toán</string>
    <string name="san_pham_moi_nhat">Sản phẩm mới nhất</string>
    <string name="cam">Cam</string>
    <string name="oi">Ổi</string>
    <string name="man">Mận</string>
    <string name="xoai">Xoài</string>
    <string name="nho">Nho</string>
    <string name="le">Lê</string>
    <string name="tao">Táo</string>
    <string name="bannerimage">bannerImage</string>
    <string name="bang_san_pham">Bảng sản phẩm SALES</string>
    <string name="thong_tin_ca_nhan">Thông tin cá nhân</string>
    <string name="sua_thong_tin_ca_nhan">Sửa thông tin cá nhân</string>
    <string name="dia_chi_nhan_hang">Địa chỉ nhận hàng</string>
    <string name="don_hang_tung_mua">Đơn hàng từng mua</string>
    <string name="ho_tro_khach_hang">Hỗ trợ khách hàng</string>
    <string name="tong_dai_tu_van">Tổng đài tư vấn</string>
    <string name="gop_y">Góp ý / Liên hệ</string>
    <string name="tim_kiem_sieu_thi">Tìm kiếm siêu thị</string>
    <string name="uu_dai">Ưu đãi</string>
    <string name="qua_cua_tui">Quà của tôi</string>
    <string name="tich_diem_doi_qua">Tích điểm đổi quà</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="todo">TODO</string>
    <string name="trai_cay">Trai cay</string>
    <string name="ten_dang_nhap">Tên đăng nhập</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="toggle_password_visibility">Toggle password visibility</string>
    <string name="nhap_lai_mat_khau">Nhập lại mật khẩu</string>
    <string name="dang_ky">Đăng ký</string>
    <string name="dang_nhap_bang_google">Đăng nhập bằng Google</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="dang_nhap_bang_facebook">Đăng nhập bằng Facebook</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="quan_ly">Quản lý</string>
    <string name="admin">Admin</string>
    <string name="san_pham">Sản phẩm</string>
    <string name="khuyen_mai">Khuyến mãi</string>
    <string name="nguoi_dung">Người dùng</string>
    <string name="trai_cay_tuoi">Trái cây tươi</string>
    <string name="trai_cay_nhiet_doi">Trái cây nhiệt đới</string>
    <string name="trai_cay_say_kho">Trái cây sấy khô</string>
    <string name="gio_trai_cay">Giỏ trái cây</string>
    <string name="san_pham_ban_chay">Sản phẩm bán chạy</string>
    <string name="tim_kiem_san_pham">Tìm kiếm sản phẩm</string>
    <string name="mua">Mua</string>
    <string name="suu_thong_tin_ca_nhan">Sửa thông tin cá nhân</string>
    <string name="role">Role</string>
    <string name="enter_role">Enter Role</string>

    <string name="product_name">Tên sản phẩm</string>
    <string name="price">Giá</string>
    <string name="quantity">Số lượng</string>
    <string name="actions">Chức năng</string>
    <string name="add">Thêm</string>


    <string-array name="order_setting_options">
        <item>Thêm</item>
        <item>Xóa</item>
    </string-array>


</resources>