<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.Home.UserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_bak"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/toolbar_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/user_tab_btshape"
                android:text="@string/thong_tin_ca_nhan"
                android:textAlignment="center"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btUserInfo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/user_tab_btshape"
                android:backgroundTint="@null"
                android:drawableEnd="@drawable/arrow_right_icon"
                android:text="@string/sua_thong_tin_ca_nhan"
                android:textAlignment="textStart"
                android:textColor="@color/text_color"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btUserAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/user_tab_btshape"
                android:backgroundTint="@null"
                android:drawableEnd="@drawable/arrow_right_icon"
                android:text="@string/dia_chi_nhan_hang"
                android:textAlignment="textStart"
                android:textColor="@color/text_color"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btUserOrder"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/user_tab_bot"
                android:backgroundTint="@null"
                android:drawableEnd="@drawable/arrow_right_icon"
                android:text="@string/don_hang_tung_mua"
                android:textAlignment="textStart"
                android:textColor="@color/text_color"
                app:backgroundTint="@null" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/toolbar_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/user_tab_btshape"
                android:text="@string/ho_tro_khach_hang"
                android:textAlignment="center"
                android:textSize="17sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/user_tab_btshape"
                android:backgroundTint="@null"
                android:drawableEnd="@drawable/arrow_right_icon"
                android:text="@string/tong_dai_tu_van"
                android:textAlignment="textStart"
                android:textColor="@color/text_color"
                app:backgroundTint="@null" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/user_tab_btshape"
                android:backgroundTint="@null"
                android:drawableEnd="@drawable/arrow_right_icon"
                android:text="@string/gop_y"
                android:textAlignment="textStart"
                android:textColor="@color/text_color"
                app:backgroundTint="@null" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/user_tab_bot"
                android:backgroundTint="@null"
                android:drawableEnd="@drawable/arrow_right_icon"
                android:text="@string/tim_kiem_sieu_thi"
                android:textAlignment="textStart"
                android:textColor="@color/text_color"
                app:backgroundTint="@null" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/toolbar_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/user_tab_btshape"
                android:text="@string/uu_dai"
                android:textAlignment="center"
                android:textSize="17sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/user_tab_btshape"

                android:backgroundTint="@null"
                android:drawableEnd="@drawable/arrow_right_icon"
                android:text="@string/qua_cua_tui"
                android:textAlignment="textStart"
                android:textColor="@color/text_color"
                app:backgroundTint="@null" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/user_tab_bot"
                android:backgroundTint="@null"
                android:drawableEnd="@drawable/arrow_right_icon"
                android:text="@string/tich_diem_doi_qua"
                android:textAlignment="textStart"
                android:textColor="@color/text_color"
                app:backgroundTint="@null" />

        </LinearLayout>


        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/squre_shape"
            android:backgroundTint="@null"
            android:text="@string/dang_xuat"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="17sp"
            app:backgroundTint="@null" />


    </LinearLayout>


</ScrollView>