<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="8dp"
    android:weightSum="8.5">

    <TextView
        android:id="@+id/txtId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/id"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2.25"
        android:gravity="center"
        android:text="@string/username"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2.25"
        android:gravity="center"
        android:text="@string/password"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtRole"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/role"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/create_icon"
            app:backgroundTint="@null" />

    </LinearLayout>


</LinearLayout>
