<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_bkg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp"

    tools:context=".Ui.Home.HomeActivity">

    <ImageView
        android:id="@+id/img_product"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/traicay" />


    <TextView
        android:id="@+id/txtTenSp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/trai_cay"
        android:textAlignment="center"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/txtGiaSp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/_75_000"
        android:textAlignment="center"
        android:textSize="14sp" />

</LinearLayout>
