<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bkg_color"
    android:orientation="vertical">

    <!-- Toolbar -->

    <!-- Nội dung cuộn -->
    <ScrollView
        android:id="@+id/scrollviewCart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <!-- Thông tin giao hàng -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/toolbar_background"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/giao_den"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/nhap_thong_tin_khach_hang"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edtnhapdiachi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/sieu_thi_BXH"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnXoaAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_button"
                android:text="Xóa tất cả"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/background" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/toolbar_background">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerviewCart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


            <!-- Giỏ hàng trống -->
            <TextView
                android:id="@+id/txtgiohangtrong2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/gio_hang_trong"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <!-- Tổng tiền -->
            <LinearLayout
                android:id="@+id/totalContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Tổng đơn hàng -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tong_don_hang"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txttongtien"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/_75_000"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <!-- Phương thức thanh toán -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/phuong_thuc_thanh_toan"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/spinnerPaymentMethod"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:background="@android:drawable/spinner_background" />
                </LinearLayout>

                <!-- Button Thanh Toán -->
                <Button
                    android:id="@+id/btntienhang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/custom_button"
                    android:text="@string/thanh_toan"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:backgroundTint="@color/background" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
