<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Ui.Admin.AdminInfoFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">


        <LinearLayout
            android:id="@+id/infoadmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/toolbar_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/user_tab_btshape"
                android:text="@string/thong_tin_ca_nhan"
                android:textAlignment="center"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btnAdminInfo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/user_tab_btshape"
                android:backgroundTint="@null"
                android:drawableLeft="@drawable/user_icon"
                android:drawableRight="@drawable/arrow_right_icon"
                android:text="@string/suu_thong_tin_ca_nhan"
                android:textAlignment="textStart"
                android:textColor="@color/text_color"
                app:backgroundTint="@null" />


        </LinearLayout>


        <Button
            android:id="@+id/btnLogoutAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button"
            android:text="@string/dang_xuat"
            android:textColor="@color/black"
            app:backgroundTint="@color/design_default_color_background" />


    </LinearLayout>


</FrameLayout>